<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/edit"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:focusable="true">
    
        <ImageView
            android:src="@drawable/ic_action_edit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:contentDescription="@string/edit_entity" />

        <TextView
            android:id="@+id/edit_text"
            android:layout_gravity="center_vertical"
            android:text="@string/edit_item_text"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            />
        
    </LinearLayout>


    <LinearLayout
        android:id="@+id/delete"
        android:clickable="true"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true">

        <ImageView
            android:src="@drawable/ic_action_delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:contentDescription="@string/delete_entity" />

        <TextView
            android:id="@+id/delete_text"
            android:layout_gravity="center_vertical"
            android:text="@string/delete_product"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>