<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_action_warning"
            />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"
            android:text="@string/are_you_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/you_will_not_be_able_to_revert_this_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:id="@+id/cancel_delete_button"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/danger"
            android:layout_height="wrap_content"/>

        <Button
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:id="@+id/confirm_delete_button"
            android:text="@string/yes_delete_it"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/success"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</layout>